Commit #106: Make the heading shorter - Agent Chat Interface

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -501,7 +501,7 @@
         });
 
         /* Welcome the user */
-        $("#detailsSectionHeading").text("Digital Diary Agent Chat Interface");
+        $("#detailsSectionHeading").text("Agent Chat Interface");
 
         textToDisplay = "Agent" + ": " + "Welcome to the Digital Diary Agent Chat Interface";
         addConversationToDetailsSection(textToDisplay);
