Commit #107: Add Background to canvas-wrap and make the canvas occupy full height/width of the canvas wrap

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -64,14 +64,15 @@
         width:850px;
         float: left;
         overflow-y: auto;
+        background: rebeccapurple;
     }
 
     #canvas-wrap canvas {
         position:absolute; top:0; left:0;
         border: 1px solid #c3c3c3;
         z-index: -1;
-        height: 500px;
-        width: 800px;
+        height: 432px;
+        width: 833px;
         background: rebeccapurple;
     }
 
