Commit #108: Add Side Navigation Header

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -13,6 +13,30 @@
         margin-top: 3px !important;
     }
 
+    #side-nav-header{
+        height: 40px;
+        width: 90px;
+        margin-left: 2px;
+        border: deeppink;
+        border-style: solid;
+        border-width: 1px;
+    }
+
+    #side-nav-button-div{
+        height: 25px;
+        width: 25px;
+        background-color: deeppink;
+        margin-left: 45px;
+        margin-top: 8px;
+        position: absolute;
+    }
+
+    #side-nav-button-icon{
+        color: yellow;
+        font-size: 21px;
+        margin-left: 5px;
+    }
+
     #dashboardCurrentDate{
         font-size: 24px;
         float: left;
@@ -300,6 +324,11 @@
 
 
 </style>
+<div id="side-nav-header">
+    <div id="side-nav-button-div">
+        <div id="side-nav-button-icon expand">V</div>
+    </div>
+</div>
 <div class="container">
     <div class="row dashboard-section">
         <div id="previousDateArrow" class="dashboardHeaderArrow previousArrow"></div>
