Commit #109: Move the expand css style from the id of side nav button icon id

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -326,7 +326,7 @@
 </style>
 <div id="side-nav-header">
     <div id="side-nav-button-div">
-        <div id="side-nav-button-icon expand">V</div>
+        <div id="side-nav-button-icon" class="expand">V</div>
     </div>
 </div>
 <div class="container">
