--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -22,7 +22,7 @@
         border-width: 1px;
     }
 
-    #side-nav-button-div {
+    #side-nav-toggle-button-div {
         height: 25px;
         width: 25px;
         background-color: deeppink;
@@ -341,6 +341,8 @@
         border: deeppink;
         border-style: solid;
         border-width: 1px;
+        /* Keep the side nav panel invisible by default */
+        visibility: hidden;
     }
 
     .side-nav-item{
@@ -377,7 +379,7 @@
 
 </style>
 <div id="side-nav-header">
-    <div id="side-nav-button-div">
+    <div id="side-nav-toggle-button-div">
         <div id="side-nav-button-icon" class="expand">V</div>
     </div>
     <div id="side-nav-panel">
@@ -529,7 +531,19 @@
 
         /* Initialize the chat window */
         initializeChatWindow();
+
+        /* Initialize the Side Navigation Panel */
+        initializeSideNavigationPanel();
     });
+
+    /* Initialize the Side Navigation Panel */
+    var initializeSideNavigationPanel = function () {
+        /* Handler for Side Nav Toggle Button Div click event. Triggered whenever user clicks on the Side Nav Toggle Button Div. */
+        $("#side-nav-toggle-button-div").click(function () {
+            /* Toggle the visibility of the Side Nav Panel */
+            $("#side-nav-panel").toggle();
+        });
+    }
 
     /* Initialize the Mini-map for the Canvas Tiles */
     var initializeMiniMap = function () {
