Commit #114: Make display:none for Chat Window and Side Nav Panel

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -150,6 +150,8 @@
         width: 290px;
         height: 105px;
         background-color: chartreuse;
+        /* Keep it invisible by default */
+        display: none;
     }
 
     #chatWindowStrip {
@@ -341,6 +343,8 @@
         border: deeppink;
         border-style: solid;
         border-width: 1px;
+        /* Keep it invisible by default */
+        display: none;
     }
 
     .side-nav-item{
