Commit #115: Change the cursor to pointer on hover over Chat Window Strip and Side Nav Toggle Button

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -29,6 +29,8 @@
         margin-left: 45px;
         margin-top: 8px;
         position: absolute;
+        /* Change the cursor to pointer on hover */
+        cursor: pointer;
     }
 
     #side-nav-button-icon {
@@ -160,6 +162,8 @@
         height: 27px;
         background-color: chartreuse;
         margin-top: 105px;
+        /* Change the cursor to pointer on hover */
+        cursor: pointer;
     }
 
     #chatWindowTextArea {
