Commit #117: Use rotateY instead for side-nav-button collapse state

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -40,7 +40,7 @@
     }
 
     #side-nav-button-icon.collapse {
-        transform: rotate(180deg) translate(5px,0px);
+        transform: rotateY(180deg);
     }
 
     #dashboardCurrentDate {
