Commit #118: Remove all transform properties and observe behavior

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -40,7 +40,7 @@
     }
 
     #side-nav-button-icon.collapse {
-        transform: rotateY(180deg);
+        /*transform: rotateY(180deg);*/
     }
 
     #dashboardCurrentDate {
