Commit #125: Add {% verbatim %} tags to sideNavItemTemplate

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -498,6 +498,7 @@
     {% endverbatim %}
 </script>
 <script id="sideNavItemTemplate" type="text/x-jsrender">
+    {% verbatim %}
     <div id="{{:navItemId}}" class="side-nav-item">
             <div class="side-nav-item-inner-wrapper">
                 <div class="side-nav-item-icon">
@@ -506,6 +507,7 @@
                 <div class="side-nav-item-text">{{:navItemText}}</div>
             </div>
         </div>
+    {% endverbatim %}
 </script>
 <script type="text/javascript">
 
