Commit #127: Turn sideNavGroupDiv into a jquery object in order to call append on it

--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -873,7 +873,7 @@
                 var sideNavItemDiv = sideNavItemTemplate.render(sideNavItemData);
 
                 /* Append Nav Items to the Nav Group */
-                sideNavGroupDiv.append(sideNavItemDiv);
+                $(sideNavGroupDiv).append(sideNavItemDiv);
             }
 
             /* Append Nav Group to the Side Panel Div */
