--- a/hello/templates/dashboard.html
+++ b/hello/templates/dashboard.html
@@ -940,7 +940,7 @@
         }
 
         /* If Group Header is absent, make the header invisible */
-        if (groupHeaderDataWasNull == null) {
+        if (groupHeaderDataWasNull) {
             sideNavGroupDiv.find(".side-nav-group-header").css("visibility", "hidden");
         }
     }
